Fixed the foreground color of error text message.

--- a/WpfApp3/View/Country.xaml
+++ b/WpfApp3/View/Country.xaml
@@ -85,6 +85,7 @@
                         Grid.Column="1"
                         Background="LightGoldenrodYellow"
                         BorderThickness="0"
+                        Foreground="Black"
                         FontSize="13"
                         Text="{Binding ErrorTextBox1_Text}"
                         Watermark="Enter a Value" />
