--- a/WpfApp3/View/Currencies.xaml
+++ b/WpfApp3/View/Currencies.xaml
@@ -86,6 +86,7 @@
                         Background="LightGoldenrodYellow"
                         BorderThickness="0"
                         FontSize="13"
+                        Foreground="Black"
                         Text="{Binding ErrorTextBox1_Text}"
                         Watermark="Enter a Value" />
                 </Grid>
