--- a/WpfApp3/View/Certification.xaml
+++ b/WpfApp3/View/Certification.xaml
@@ -88,6 +88,7 @@
                         Background="LightGoldenrodYellow"
                         BorderThickness="0"
                         FontSize="13"
+                        Foreground="Black"
                         Text="{Binding ErrorTextBox1_Text}"
                         Watermark="Enter a Value" />
                 </Grid>
