--- a/WpfApp3/View/Item.xaml
+++ b/WpfApp3/View/Item.xaml
@@ -88,6 +88,7 @@
                         Grid.Row="0"
                         Grid.Column="1"
                         Background="LightGoldenrodYellow"
+                        Foreground="Black"
                         BorderThickness="0"
                         FontSize="13"
                         Text="{Binding ErrorTextBox1_Text}"
